no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3392,8 +3392,8 @@ PERFORMANCE.timeOrigin                          #DOMGLOBALTIME base of DOMLOCALT
 PERFORMANCE.nodeTiming                          #PERFNODETIMING, which is a PERFENTRY with:
                                                 #  - entryType 'node'
                                                 #  - name 'node'
-                                                #  - startTime: same as PERFORMANCE.timeOrigin
-                                                #  - duration: same as PERFORMANCE.now() - PERFORMANCE.timeOrigin
+                                                #  - startTime: 0
+                                                #  - duration: same as PERFORMANCE.now()
                                                 #Is similar to PERFORMANCENAVIGATION, but for Node
 PERFNODETIMING.*                                #The following use same same logic as process.hrtime(), but in ns
 PERFNODETIMING.nodeStart                        #Node process started
