no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3385,9 +3385,15 @@ PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMI
                                                 #     - if true, use setImmediate()
                                                 #  - PERFOBSERVER is an ASYNCRESOURCE
 
-PERFORMANCE.timeOrigin                          #DOMGLOBALTIME base of DOMLOCALTIME, i.e. when process started.
-                                                #Use same logic as process.hrtime() (i.e. arbitrary number),
-                                                #but as a DOMETIMESTAMP
+DOMTIMESTAMP                                    #Still milliseconds unit, but precision (on an average machine) is:
+                                                #  - if DOMGLOBALTIME: 1µs
+                                                #  - otherwise: 100ns on Windows, 1ns on Unix
+
+PERFORMANCE.timeOrigin                          #DOMGLOBALTIME base of DOMLOCALTIME, i.e. when process started (or when Node started running???).
+                                                #Milliseconds unit.
+                                                #Precision is usually microseconds on Unix, milliseconds on Windows.
+                                                #timeOrigin: nanoseconds, but is not timestamp
+                                                #timeOriginTimestamp: ms/us, but is timestamp
 
 PERFORMANCE.nodeTiming                          #PERFNODETIMING, which is a PERFENTRY with:
                                                 #  - entryType 'node'
