no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3389,11 +3389,8 @@ DOMTIMESTAMP                                    #Still milliseconds unit, but pr
                                                 #  - if DOMGLOBALTIME: 1µs
                                                 #  - otherwise: 100ns on Windows, 1ns on Unix
 
-PERFORMANCE.timeOrigin                          #DOMGLOBALTIME base of DOMLOCALTIME, i.e. when process started (or when Node started running???).
-                                                #Milliseconds unit.
-                                                #Precision is usually microseconds on Unix, milliseconds on Windows.
-                                                #timeOrigin: nanoseconds, but is not timestamp
-                                                #timeOriginTimestamp: ms/us, but is timestamp
+PERFORMANCE.timeOrigin                          #DOMGLOBALTIME base of DOMLOCALTIME, i.e. when Node starting running
+                                                #  - this is right after the process was initialized (which takes ~7ms on my machine)
 
 PERFORMANCE.nodeTiming                          #PERFNODETIMING, which is a PERFENTRY with:
                                                 #  - entryType 'node'
