no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -311,7 +311,7 @@ NUMn                                        -|||#BIGINT. Infinite precision inte
                                             -|||#  - no implicit transtyping between NUM and BIGINT (but explicit transtyping possible)
                                             -|||#     - exception: == === != !== < <= > >=
                                             -|||#  - implicit transtyping to BIGINT throws where NUM would transtype to NaN
-                                            -|||#  - no BIGINT.toFixed|toPrecision|toExponential()
+                                            -|||#  - no BIGINT.toFixed|toPrecision|toExponential() (since it is integer)
                                             -|||#Ponyfill 'jsbi'
 BigInt.asUintN|asIntN(NUM, NUM2n)->NUM2n    -|||#Enforce max size NUM bits on NUM2n
                                             -|||#On overall, rotate to min|max value (according to NUM)
@@ -365,7 +365,8 @@ Object.is(VAL, VAL2)                          -|#Same as ===, except !Object.is(
 
 
 IMPLICIT ==>                                    #To STR:
-                                                #  - BOOL|NUM|BIGINT|undefined|null: 'BOOL|...'
+                                                #  - BOOL|NUM|undefined|null: 'BOOL|...'
+                                                #  - BIGINT: 'NUM' (not 'NUMn')
                                               -|#  - SYM: 'Symbol(VAR)' (only with String(SYM) or SYM.toString())
                                                 #  - OBJ:
                                                 #     - OBJ.toString|valueOf() (valueOf has priority)
