--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.12.1
+VERSION ==>                       #7.14.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1653,6 +1653,7 @@ unicorn/numeric-separators-style ##Use numeric thousands separators
 
 no-octal                          #Avoid 0... (prefer 0o...)
 no-octal-escape                   #Avoid \NNN octal escape
+no-nonoctal-decimal-escape        #Avoid \8 and \9
 prefer-numeric-literals           #Avoid parseInt(STR, 2|8|16) when 0b... 0o... or 0x... can be used instead
 radix [STR]                       #With parseInt(..., RADIX):
                                   #  - STR 'always' (def): require RADIX
