no commit message

--- a/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
+++ b/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
@@ -19,7 +19,7 @@ ALTERNATIVES ==>                  #For:
                                   #     - esformatter (and jsfmt): not maintained
                                   #     - es-beautifier: not maintained
 
-VERSION ==>                       #2.1.2
+VERSION ==>                       #2.2.0
 
 OPINIONATED ==>                   #By design prettier does not allow configuration.
                                   #There are only few configuration options available for JavaScript
@@ -144,6 +144,8 @@ PRETTIER.getFileInfo[.sync]
 --parser STR|MODULE               #Can be:
                                   #  - 'babel' (def) (@babel/parser)
                                   #  - 'typescript' (@typescript-eslint/parser)
+                                  #  - 'espree'
+                                  #  - 'meriyah'
                                   #  - '[babel-]flow'
                                   #     - "babel-flow" parsed ambiguous syntax as JavaScript, "flow" as Flow
                                   #  - 'json'
@@ -186,6 +188,7 @@ PRETTIER.getFileInfo[.sync]
 
 --single-quote                    #Def: double quote except if STR contains double quotes
 --no-bracket-spacing              #{ ... } instead of {...}
+--trailing-comma STR              #Can be 'none', 'es5' (only if ES5) (def), 'all'
 
 
                                              /=+===============================+=\
@@ -198,7 +201,6 @@ PRETTIER.getFileInfo[.sync]
 GENERAL ==>                       #Parser is @babel/parser
 
 --no-semi                         #Instead of always. Except when needed
---trailing-comma STR              #Can be 'none', 'es5' (only if ES5) (def), 'all'
 --arrow-parens STR                #Can be:
                                   #  - 'avoid': VAL => {...}
                                   #  - 'always' (def): (VAL) => {...}
