no commit message

--- a/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
+++ b/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
@@ -5,7 +5,7 @@
 
 
 
-VERSION ==>                       #3.3.19
+VERSION ==>                       #3.3.22
 
 ALTERNATIVES ==>                  #  - jscpd (prefered): multi-languages
                                   #  - jsinspect: JavaScript-only, does not always work correctly
@@ -73,6 +73,7 @@ CONF.reporters                    #STR_ARR
                                   #  - consoleFull: show code snippets (only of first one for each duplication)
                                   #  - time (always added on CLI): show execution time
                                   #  - verbose
+                                  #  - badge: SVG
                                   #  - json: to jscpd-report.json
                                   #  - xml
                                   #  - html
