--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1518,7 +1518,7 @@ ARR.slice([NUM[, NUM2]])                        #Returns ARR copy from index NUM
                                                 #NUM|NUM2 can be negative, i.e. from ARR end.
 ARR.splice(NUM[, NUM2[, VAL...]])               #Erase and return NUM2 elements (def: all) from index NUM, and replace them with VAL... (def: nothing)
 ARR.fill(VAL[, NUM[, NUM2]])                  -|#Same as ARR.splice(NUM, NUM2, VAL...) with VAL being repeated NUM2-NUM times.
-ARR.copyWithin(NUM, NUM2[, NUM3])             -|#Copies ARR.slice(NUM2, NUM3) to ARR itself, starting at index NUM.
+ARR.copyWithin(NUM, NUM2[, NUM3])             -|#Copies ARR.slice(NUM2[, NUM3]) to ARR.slice(NUM, ...)
                                               -|#Returns ARR.
 ARR.join([STR])                                 #Returns as STR2, with STR delimiter (def: ',')
 
