no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.14.0
+VERSION ==>                       #7.15.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1476,6 +1476,11 @@ unicorn/no-object-as-default-
  parameter                       ##Avoid default argument = {...}. Prefer destructuring {VAR = ..., VAR2 = ...}
 
 no-new-object                     #Avoid new Object()
+
+no-unsafe-optional-chaining [OBJ] #If OBJ2?.VAR, VAR might be undefined, i.e. do not allow using as:
+                                  #  - a FUNC without ?.(...) or ??
+                                  #  - an OBJ2 without ?. or ??
+                                  #  - a NUM without ??, if OBJ.disallowArithmeticOperators true (def: false)
 
 
                                              /=+===============================+=\
