no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1928,18 +1928,18 @@ async function [*] [FUNC](...) {...}          -|#Returns FUNC2(...)->PROMISE, wh
 [class ...] { async [*] FUNC() {...} ... }    -|#  - return VAL -> resolve PROMISE with VAL
 async (...) => ...                            -|#  - throw VAL -> reject PROMISE with VAL
                                               -|#  - return PROMISE2 -> reject|resolve PROMISE with PROMISE2 value
-await PROMISE2|VAL                            -|#Inside async FUNC:
-                                              -|#  - waits for PROMISE2 to resolve|reject
-                                              -|#     - if PROMISE2 value returns PROMISE3, use PROMISE3 value instead
+await PROMISABLE|VAL                          -|#Inside async FUNC:
+                                              -|#  - waits for PROMISABLE to resolve|reject
+                                              -|#     - if PROMISABLE value returns PROMISABLE2, use PROMISABLE2 value instead
                                               -|#     - VAL is like Promise.resolve(VAL)
-                                              -|#  - then returns|throws PROMISE2 value
+                                              -|#  - then returns|throws PROMISABLE value
                                           14*-|~#Can be in top-level scope too
 
 ASYNC_ITERATOR                                -|#ITERATOR whose next|return|throw(...)->PROMISE(VAL) (instead of returning|throwing VAL)
 ASYNC_ITERABLE                                -|#OBJ where OBJ[Symbol.asyncIterator]()->ASYNC_ITERATOR
                                               -|#PROMISE_ARR are ASYNC_ITERABLE
                                               -|#Cannot be used as an ITERABLE, only as an ASYNC_ITERABLE (i.e. for await)
-for await (QUAL VAR of ASYNC_ITERABL) {...}   -|#Iterates with VAR = NEXT_PROMISE_VAL, i.e. async loop
+for await (QUAL VAR of ASYNC_ITERABL) {...}   -|#Iterates with VAR = NEXT_PROMISABLE_VAL, i.e. async loop
                                               -|#Must be within an async function
 
 async function * [FUNC](...) {...}            -|#Generator that:
