no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3577,7 +3577,7 @@ inherits(TYPE_FUNC, TYPEPARENT_FUNC)            #Makes TYPE inherits from TYPEPA
 
 types.isRegExp(VAL)->BOOL                       #True if REGEXP
 types.isDate(VAL)->BOOL                         #True if DATE
-types.isPromise(VAL)->BOOL                      #True if PROMISE
+types.isPromise(VAL)->BOOL                      #True if PROMISE (not PROMISABLE)
 types.is[Weak]Map|Set(VAL)->BOOL                #True if [WEAK]MAP|SET
 types.isNativeError(VAL)->BOOL                  #True if instanceof ERROR
 types.isProxy(VAL)->BOOL                        #True if PROXY
