no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1085,10 +1085,10 @@ INTERFACE.pause|resume()                        #Like ISTREAM.pause|resume()
 INTERFACE.on("pause|resume", FUNC())            #
 INTERFACE.on("SIGINT|SIGTSTP|SIGCONT", FUNC())  #
 
-clearLine(OSTREAM, NUM[, FUNC()])->BOOL         #Can be 0 (entire line, \e2k) or -1|1 (to the left|right of cursor, \e0k, \e1k)
+clearLine(OSTREAM, NUM[, FUNC()])->BOOL         #Can be 0 (entire line, \e[2k) or -1|1 (to the left|right of cursor, \e[0k, \e[1k)
                                                 #FUNC|BOOL are from the underlying OSTREAM.write()
-cursorTo(OSTREAM, NUM, NUM2[,FUNC()])->BOOL     #Move cursor absolutely (\eNUMa, \eNUMb)
-moveCursor(OSTREAM, NUM[, NUM2][,FUNC()])->BOOL #Move cursor relatively (\eNUM2c, \eNUM2d)
+cursorTo(OSTREAM, NUM, NUM2[,FUNC()])->BOOL     #Move cursor absolutely (\e[NUMa, \e[NUMb)
+moveCursor(OSTREAM, NUM[, NUM2][,FUNC()])->BOOL #Move cursor relatively (\e[NUM2c, \e[NUM2d)
 clearScreenDown(OSTREAM[, FUNC()])->BOOL        #Clear all following lines (\e0j). To clear screen, combine with cursorTo(OSTREAM, 0, 0)
 
 emitKeypressEvents(OSTREAM[, INTERFACE])        #Enable OSTREAM.on('keypress')
