no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -295,9 +295,11 @@ new EventEmitter([OPTS])                        #Base class of all objects recei
 EVENTEMITTER.on('EVENT', FUNC)->EVENTEMITTER    #
 EVENTEMITTER.once('EVENT', FUNC)->EVENTEMITTER  #
 EVENTEMITTER.prepend[Once]Listener(...)         #Like on[ce](...) but adds to beginning of listeners list, not end
-once(EVENTEMITTER|EVENTTARGET, 'EVENT')         #Like EVENTEMITTER.once() but using PROMISE:
+once(EVENTEMITTER|EVENTTARGET, 'EVENT'[, OPTS]) #Like EVENTEMITTER.once() but using PROMISE:
  ->PROMISE_ARG_ARR                              #  - resolved with ARG_ARR on emit('EVENT', ...ARGS)
                                                 #  - rejected with VAL on emit('error', VAL) (unless 'EVENT' is 'error' itself)
+                                         15.0.0*#OPTS:
+                                         15.0.0*#  - signal ABORT_SIGNAL
 on(EVENTEMITTER|EVENTTARGET, 'EVENT')
  ->ASYNC_ITERATOR                            12*#Same but for EVENTEMITTER.on(), as a an ASYNC_ITERATOR
 EVENTEMITTER.off|removeListener('EVENT', FUNC)
