--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -64,8 +64,8 @@ npm                                             #Node packet manager (see doc)
 
 
 clear|setTimeout|Interval(...)                  #Like DOM ones (see DOM doc), but extra members
-                                                #Unlike DOM, error if INT > 2 ** 31 - 1 (25 days)
-clear|setImmediate(...)                         #
+clear|setImmediate(...)                         #Unlike DOM, error if INT > 2 ** 31 - 1 (25 days)
+                                                #ID is not returned when using util.promisify()
 ID.[un]ref()->ID                                #Yield the macrotask (see JavaScript doc)
 ID.hasRef()->BOOL                            11*#
 ID.refresh()->ID                                #Reset the counter
