no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -722,6 +722,7 @@ object-curly-spacing [STR] [OBJ]  #Spaces between {}
                                   #  - objectInObjects BOOL (def: depends on 'always|never'): space if OBJ item
                                   #  - arraysInObjects BOOL (def: depends on 'always|never'): space if ARR item
                                   #'always' does not require spaces inside empty OBJ
+unicorn/empty-brace-spaces       ##Forbid spaces between empty {}
 space-before-blocks [STR|OBJ]     #Spaces before {} block
                                   #STR: 'always' (def), 'never' or 'off'
                                   #OBJ: functions|keywords|classes STR: same for a specific block type
@@ -1121,6 +1122,7 @@ unicorn/prevent-abbreviations    ##Prevent abbreviations/shortnames for variable
                                  ##        - { STR: false }: do not report
                                  ##  - extendDefaultReplacements BOOL (def: true): if false, replace list instead of extending it
                                  ##  - whitelist { STR: true, ... }: allow STR (case-sensitive)
+                                 ##  - ignore STR|REGEXP_ARR (def: [])
                                  ##  - extendDefaultWhitelist BOOL (def: true)
                                  ##  - checkDefaultAndNamespaceImports 'internal' (def) or BOOL: check "import ... from" and "import * as ... from"
                                  ##  - checkShorthandImports 'internal' (def) or BOOL: check "import {VAR} from"
@@ -1193,7 +1195,7 @@ no-eq-null                        #=== null not == null
 
 valid-typeof [OBJ]                #Must use "typeof VAR === VAL" with VAL being STR (a valid one) or typeof VAR2
                                   #OBJ: requireStringLiterals BOOL (def: true): if false, allow EXPR as VAL
-unicorn/no-array-instanceof      ##Avoid instanceof Array (prefer Array.isArray())
+unicorn/no-instanceof-array      ##Avoid instanceof Array (prefer Array.isArray())
 
 no-negated-condition              #Avoid !TEST if there is an else branch
 no-constant-condition [OBJ]       #Avoid constant in TEST
@@ -1228,6 +1230,7 @@ unicorn/prefer-ternary           ##Use ?: providing each expression is only one 
 no-lone-blocks                    #Avoid unnecessary {} blocks
 
 no-lonely-if                      #Use "else if" instead of "else" then "if"
+unicorn/no-lonely-if             ##Same but a little better
 no-else-return [OBJ]              #Early returns: if a "if" branch returns, no "else" branch needed
                                   #OBJ: allowElseIf BOOL (def: true)
 
@@ -1360,6 +1363,7 @@ no-confusing-arrow [OBJ]          #Avoid ... => VAL, where VAL makes it confusin
 
 max-params [NUM]                  #Max number of positional parameters (def: 3)
 default-param-last                #Avoid arguments default values on non-last arguments
+unicorn/prefer-default-parameters##Use default parameters when possible
 
 no-dupe-args                      #Avoid duplicate argument names
 
@@ -1395,8 +1399,9 @@ consistent-return                 #If there is one return VAL, there must be no 
                                   #  - treatUndefinedAsUnspecified BOOL: if false (def), there must be no
                                   #    return undefined either
 
-unicorn/
- consistent-function-scoping     ##Functions must be defined top-level if not closures
+unicorn/                         ##Functions must be defined top-level if not closures
+ consistent-function-scoping     ##OBJ:
+ [OBJ]                           ##  - checkArrowFunctions BOOL (def: true)
 
 unicorn/prefer-reflect-apply     ##Prefer Reflect.apply(FUNC, CONTEXT, ...) over FUNC.apply(CONTEXT, ...) or Function.prototype.apply.call(FUNC, CONTEXT, ...)
 
@@ -1557,10 +1562,11 @@ array-callback-return [OBJ]       #[TYPED_]ARR.from|every|some|filter|find[Index
                                   #  - allowImplicit BOOL: if false (def), forbid "return" with no VAL
                                   #  - checkForEach BOOL: if true (def: false), forbid "return" in [TYPED_]ARR.forEach
 unicorn/prefer-includes          ##Prefer ARR|STR.includes() over ARR|STR.indexOf()
-unicorn/prefer-flat-map          ##Prefer ARR.flatMap() over ARR.map().flat()
-unicorn/no-reduce                ##Prefer ARR.map|filter() over ARR.reduce()
+unicorn/prefer-array-flat-map    ##Prefer ARR.flatMap() over ARR.map().flat()
+unicorn/no-array-reduce          ##Prefer ARR.map|filter() over ARR.reduce()
 unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, ...) instead of slice|splice(ARR|STR|TYPED_ARR.length - NUM, ...)
 unicorn/prefer-array-find        ##Prefer ARR.find() over ARR.filter()[0]
+unicorn/prefer-array-some        ##Prefer ARR.some() over ARR.find()
 
 no-array-constructor              #Avoids [new] Array(VAL,...)
                                   #[new] Array(NUM) is still allowed
@@ -1585,11 +1591,13 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (22.0.0)
-unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
-unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
+unicorn/*                        ##Module "eslint-plugin-unicorn" (25.0.1)
+unicorn/
+ prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
+unicorn/
+ prefer-string-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
-unicorn/prefer-replace-all       ##Must use STR.replaceAll(STR2) instead of STR.replace(/REGEXP/g) when REGEXP can be a literal STR2
+unicorn/prefer-string-replace-all##Must use STR.replaceAll(STR2) instead of STR.replace(/REGEXP/g) when REGEXP can be a literal STR2
 
 unicorn/no-hex-escape            ##Avoid \x... (prefer \u....)
 unicorn/number-literal-case      ##Consistent casing for 0x... 0o... 0b... and NUMe...
@@ -1663,7 +1671,9 @@ prefer-numeric-literals           #Avoid parseInt(STR, 2|8|16) when 0b... 0o... 
 radix [STR]                       #With parseInt(..., RADIX):
                                   #  - STR 'always' (def): require RADIX
                                   #  - STR 'as-needed': forbid RADIX if 10
-prefer-number-properties          #Use 'Number.' in front of parseInt|parseFloat|isNaN|isFinite|NaN
+prefer-number-properties [OBJ]    #Use 'Number.' in front of parseInt|parseFloat|isNaN|isFinite|NaN|Infinity
+                                 ##OBJ:
+                                 ##  - checkInfinity BOOL (def: true)
 no-loss-of-precision              #Avoid very large integer, or very large fractional part, which are lost in DOUBLE float precision
 
 use-isnan [OBJ]                   #Must test NaN with [Number.]isNaN()
@@ -1689,6 +1699,16 @@ unicorn/prefer-math-trunc        ##Prefer Math.trunc() over bitwise equivalents
 
 no-new-symbol                     #Avoid new Symbol() (prefer Symbol())
 symbol-description                #Avoid Symbol(), prefer Symbol(STR)
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             DATE              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+unicorn/prefer-date-now          ##Prefer Date.now() over new Date().getTime()
 
 
                                              /=+===============================+=\
@@ -2141,6 +2161,8 @@ fp/no-nil                        ##Avoid null|undefined, except in comparison
                                  ##Avoid VARs initialized to null|undefined
                                  ##Avoid FUNCs that return null|undefined (including no return statement)
 unicorn/no-useless-undefined     ##Avoid undefined if could just be omitted
+ [OBJ]                           ##OBJ:
+                                 ##  - checkArguments BOOL (def: true): check FUNC arguments
 
 no-void [OBJ]                     #Avoid void VAL
                                   #OBJ:
@@ -2218,11 +2240,12 @@ markdown/*                       ##Node module 'eslint-plugin-markdow
 
 
 unicorn/prefer-query-selector    ##Prefer document.querySelector() over document.getElementById|ClassName|TagName()
-unicorn/prefer-node-append       ##Prefer NODE.append() over NODE.appendChild()
-unicorn/prefer-node-remove       ##Prefer NODE.remove() over NODE.removeChild()
-unicorn/prefer-text-content      ##Prefer NODE.textContent over ELEM.innerText
-unicorn/prefer-event-key         ##Prefer EVENT.key over EVENT.keyCode
-unicorn/prefer-dataset           ##Prefer ELEM.dataset over ELEM.setAttribute()
+unicorn/prefer-dom-node-append   ##Prefer NODE.append() over NODE.appendChild()
+unicorn/prefer-dom-node-remove   ##Prefer NODE.remove() over NODE.removeChild()
+unicorn/
+ prefer-dom-node-text-content    ##Prefer NODE.textContent over ELEM.innerText
+unicorn/prefer-keyboard-event-key##Prefer EVENT.key over EVENT.keyCode
+unicorn/prefer-dom-node-dataset  ##Prefer ELEM.dataset over ELEM.setAttribute()
 unicorn/prefer-modern-dom-apis   ##Prefer:
                                  ##  - NODE.replaceWith() over NODE.replaceChild()
                                  ##  - NODE.before() over NODE.insertBefore|AdjacentText|AdjacentElement()
