no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.15.0
+VERSION ==>                       #7.17.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1473,6 +1473,7 @@ prefer-destructuring [OBJ] [OBJ2] #Use OBJ|ARR destructuring when possible
                                   #OBJ: [VariableDeclarator|AssignmentExpression.]array|object BOOL (def: true)
                                   #OBJ2: enforceForRenamedProperties BOOL (def: false): must use destructuring when property
                                   #is renamed by the declaration, e.g. const { VAR: VAR2 } = OBJ;
+unicorn/consistent-destructuring ##Be consistent over whether to use OBJ|ARR destructuring or not
 unicorn/no-unreadable-array-     ##Avoid ARR destructuring with empty elements like [,,VAR] = ARR
  destructuring                   ##One empty element at beginning still allowed.
                                  ##Should sets `prefer-destructuring` rule OBJ.array to `false` to avoid conflicts
@@ -1567,9 +1568,11 @@ unicorn/no-array-reduce          ##Prefer ARR.map|filter() over ARR.reduce()
 unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, ...) instead of slice|splice(ARR|STR|TYPED_ARR.length - NUM, ...)
 unicorn/prefer-array-find        ##Prefer ARR.find() over ARR.filter()[0]
 unicorn/prefer-array-some        ##Prefer ARR.some() over ARR.find()
+unicorn/prefer-array-index-of    ##Prefer ARR.indexOf() over ARR.findIndex() when possible
 
 no-array-constructor              #Avoids [new] Array(VAL,...)
                                   #[new] Array(NUM) is still allowed
+unicorn/no-new-array              #Same but also forbid [new] Array(NUM)
 unicorn/prefer-set-has            #Prefer SET.has() over ARR.includes()
 
 
@@ -1646,6 +1649,8 @@ require-unicode-regexp            #Must use /REGEXP/u
 prefer-named-capture-group        #Must use /(?<NAME>...)/ instead of /(...)/
 
 wrap-regex                        #Must write (/REGEXP/) not /REGEXP/
+
+unicorn/prefer-regexp-test       ##Prefer REGEXP.test() over REGEXP.exec() or STR.match() when only need BOOL return value
 
 
                                              /=+===============================+=\
