--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.21.5)
+react/*                          ##Node module "eslint-plugin-react" (7.22.0)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -677,6 +677,7 @@ react/jsx-no-target-blank [OBJ]  ##<a target="_blank"> must be accompanied by re
                                  ##OBJ:
                                  ##  - enforceDynamicLinks 'always' (def) or 'never': whether to enforce it when URI is JSX
                                  ##  - allowReferrer BOOL: if false (def), requires noreferrer
+                                 ##  - warnOnSpreadAttributes BOOL (def: false): checks {...OBJ}
 react/jsx-no-script-url [OBJ_ARR]##No "javascript:*" URLs
                                  ##OBJ_ARR:
                                  ##  - name 'TAG': only for <TAG>
@@ -685,6 +686,7 @@ react/jsx-no-script-url [OBJ_ARR]##No "javascript:*" URLs
 react/jsx-key [OBJ]              ##Must use "key" when needed
                                  ##OBJ:
                                  ##  - checkFragmentShorhand BOOL (def: false): checks <>...</>
+                                 ##  - checkKeyMustBeforeSpread BOOL (def: false): forbid "key" after {...OBJ}
 react/no-array-index-key         ##Avoid using an ARR index as "key", e.g. ARR.map((VAL, index) => <RTYPE key={index}>)
 react/display-name [OBJ]         ##Must specify displayName
                                  ##If OBJ.ignoreTranspilerName BOOL false (def), ignore if Babel will fix displayName
@@ -751,6 +753,9 @@ react/sort-prop-types [OBJ]      ##Enforce propTypes alphabetical sorting
                                  ##  - requiredFirst BOOL (def: false): put required first
                                  ##  - sortShapeProp BOOL (def: false): also apply sorting on PropTypes.shape() properties
 
+react/
+jsx-no-constructed-context-values##Do not allow OBJ as "value" for contexts
+
 react/no-direct-mutation-state   ##Avoid this.state assignments (prefer setState())
 react/no-set-state               ##Avoid setState()
 react/no-did-mount|update-set-
@@ -775,7 +780,11 @@ react/jsx-indent [VAL] [OBJ]     ##Indentation: NUM or 'tab'
                                  ##OBJ:
                                  ##  - checkAttributes BOOL (def: false)
                                  ##  - indentLogicalExpressions BOOL (def: false): && ||
-react/jsx-indent-props [VAL]     ##Indentation for PROPs: NUM, 'tab' or 'first'
+react/jsx-indent-props [OBJ|VAL] ##Indentation for PROPs.
+                                 ##OBJ:
+                                 ##  - indentMode NUM, 'tab' or 'first'
+                                 ##  - ignoreTernaryOperator BOOL (def: false)
+                                 ##VAL is like { indentMode: VAL }
 react/jsx-equals-spacing [STR]   ##Requires ('always') or forbids ('never', def) spaces around =
 react/jsx-curly-spacing [OBJ|STR]##Spaces inside {}
                                  ##OBJ:
@@ -789,6 +798,7 @@ react/jsx-curly-newline [OBJ|STR]##Newlines around {}
                                  ##STR: 'consistent' (def), 'require', 'forbid'
                                  ##OBJ:
                                  ##  - multiline|singleline 'consistent' (def), 'require', 'forbid'
+react/jsx-newline                ##Newlines after <RTYPE> and {...}
 react/jsx-tag-spacing            ##Spaces around < and >
                                  ##OBJ:
                                  ##  - closingSlash STR:
