--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1217,7 +1217,8 @@ no-unneeded-ternary [OBJ]         #Avoid TEST ? true : false (prefer Boolean(TES
                                   #VAR ? VAR : VAL (prefer VAR || VAL)
 multiline-ternary [STR]           #Newlines in ?:
                                   #STR: 'always' (def) or 'never' or 'always-multiline' (always if some VAL contains newline)
-unicorn/prefer-ternary           ##Use ?: providing each expression is only one line and simple
+unicorn/prefer-ternary [STR]     ##Use ?: providing each expression is only one line and simple
+                                 ##STR: 'always' (def) or 'only-single-line'
 
 
                                              /=+===============================+=\
@@ -1513,6 +1514,7 @@ class-methods-use-this [OBJ]      #CLASS methods must use "this"
                                   #OBJ:
                                   #  - exceptMethods "FUNC"_ARR
 consistent-this [STR]             #Variables assigned with "this" must be named 'VAR' (def: 'that')
+unicorn/no-this-assignment        #Do not assign `this` to a variable
 
 no-class-assign                   #Avoid reassigning variables created by ClassDeclaration
 
@@ -1569,6 +1571,8 @@ unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, .
 unicorn/prefer-array-find        ##Prefer ARR.find() over ARR.filter()[0]
 unicorn/prefer-array-some        ##Prefer ARR.some() over ARR.find()
 unicorn/prefer-array-index-of    ##Prefer ARR.indexOf() over ARR.findIndex() when possible
+unicorn/no-array-for-each        ##Prefer for loop over ARR.forEach()
+unicorn/no-array-push-push       ##Combine multiple ARR.push() calls into one
 
 no-array-constructor              #Avoids [new] Array(VAL,...)
                                   #[new] Array(NUM) is still allowed
@@ -1594,7 +1598,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (26.0.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (27.0.0)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
@@ -1669,6 +1673,7 @@ unicorn/numeric-separators-style ##Use numeric thousands separators
                                  ##  - TYPE (among binary|octal|number|hexadecimal for base 2|8|10|16):
                                  ##     - groupLength NUM (def: 3 for base 10, 4 for base 2|8, 2 for base 16)
                                  ##     - minimumDigits NUM (def: 5 for base 10, 0 for others)
+                                 ##     - onlyIfContainsSeparator BOOL (def: false): only if at least one numeric separator is used
 
 no-octal                          #Avoid 0... (prefer 0o...)
 no-octal-escape                   #Avoid \NNN octal escape
