--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.19.0
+VERSION ==>                       #7.20.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -836,6 +836,7 @@ no-unused-expressions [OBJ]       #Avoid statements with no side-effects
                                   #  - allowShortCircuit BOOL (def: false): ignore if part of && || chain
                                   #  - allowTernary BOOL (def: false): ignore if part of ? : chain
                                   #  - allowTaggedTemplates BOOL (def: false): ignore for TAG`...`
+                                  #  - enforceForJSX BOOL (def: false)
 chai-friendly/                   ##Same but works with Chai properties.
  no-unused-expressions [OBJ]     ##Module eslint-plugin-chai-friendly (0.6.0)
 no-new                            #Avoid new TYPE as a single statement (e.g. no assignment)
