--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1565,7 +1565,7 @@ array-callback-return [OBJ]       #[TYPED_]ARR.from|every|some|filter|find[Index
                                   #OBJ:
                                   #  - allowImplicit BOOL: if false (def), forbid "return" with no VAL
                                   #  - checkForEach BOOL: if true (def: false), forbid "return" in [TYPED_]ARR.forEach
-unicorn/prefer-includes          ##Prefer ARR|STR.includes() over ARR|STR.indexOf()
+unicorn/prefer-includes          ##Prefer ARR|STR.includes() over ARR|STR.indexOf|some()
 unicorn/prefer-array-flat-map    ##Prefer ARR.flatMap() over ARR.map().flat()
 unicorn/no-array-reduce          ##Prefer ARR.map|filter() over ARR.reduce()
 unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, ...) instead of slice|splice(ARR|STR|TYPED_ARR.length - NUM, ...)
@@ -1599,7 +1599,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (27.0.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (28.0.1)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
@@ -1747,7 +1747,7 @@ no-async-promise-executor         #Avoid new Promise(async FUNC)
 require-atomic-updates            #Avoid GLOBAL_VAR = await FUNC(GLOBAL_VAR) as it creates a delay between GLOBAL_VAR
                                   #being read and written, i.e. introducing race conditions
 
-promise/*                        ##Module "eslint-plugin-promise" (4.2.1)
+promise/*                        ##Module "eslint-plugin-promise" (4.3.1)
 promise/catch-or-return [OBJ]    ##If PROMISE.then(FUNC), must call PROMISE.catch(FUNC2)
                                  ##OBJ:
                                  ##  - allowThen BOOL (def: false): allow PROMISE.then(FUNC, FUNC2) too
@@ -2237,9 +2237,12 @@ html/*                           ##Node module 'eslint-plugin-html'
                                              \=+===============================+=/
 
 
-markdown/*                       ##Node module 'eslint-plugin-markdown' (2.0.0-rc.1)
-                                 ##Allows parsing inside Markdown, but must adjust eslint --ext
+markdown/*                       ##Node module 'eslint-plugin-markdown' (2.0.0)
+                                 ##Allows parsing inside Markdown
                                  ##Must specify ```js|javascript|jsx|node
+                                 ##Must specify CONFIG.overrides OBJ_ARR:
+                                 ##  - files ['**/*.md'], processor 'markdown/markdown'
+                                 ##  - files ['**/*.md/*.js'] for the rules to ignore
 <!-- eslint-* ... -->            ##Can add eslint comment as HTML comments before the ``` block
 <!-- eslint-skip -->             ##Don't even parse next line
 
