no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -2046,9 +2046,9 @@ import "MDL"                               12*-|#Do not import the variable, jus
 import("MDL")->PROMISE(OBJ)                12*-|#As opposed to above, not static (dynamic), i.e. does not have to be top-level
                                            12*-|#If default export, defined in OBJ.default
 
-import ... "MDL" assert { VAR: "VAL", ... }  *-|#Adds information about import using VAR: VAL
-import("MDL", { assert: { VAR: "VAL", ... }})*-|#Most VAR is host-specific, but the following are standard:
- ->PROMISE(VAL)                              *-|#  - type 'json': file format is JSON
+import ... "MDL" assert { VAR: "VAL", ... } *~-|#Adds information about import using VAR: VAL
+import("MDL", { assert: { VAR: "VAL", ...}})*~-|#Most VAR is host-specific, but the following are standard:
+ ->PROMISE(VAL)                             *~-|#  - type 'json': file format is JSON
 
 CIRCULAR DEPENDENCIES ==>                  12*-|#Accessing circular properties during file loading throws an error.
                                            12*-|#But accessing them later works.
