no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1364,9 +1364,9 @@ DATETIMEFORMAT.formatToParts(DATE)->OBJ_ARR -|||#Same but returned as OBJ_ARR:
                                             -|||#  - type 'era|year|month|weekday|day|hour|minute|second|timeZoneName|separator'
                                             -|||#  - value STR
 DATETIMEFORMAT.formatRange
- (DATE, DATE2)->STR                     12*-|||~#Like format() but for range between two DATEs ('1/10/07, 10:00 AM – 1/20/07, 10:00 AM')
+ (DATE, DATE2)->STR                      12*-|||#Like format() but for range between two DATEs ('1/10/07, 10:00 AM – 1/20/07, 10:00 AM')
 DATETIMEFORMAT.formatRangeToParts
- (DATE, DATE2)->OBJ_ARR                 12*-|||~#Like formatToParts() but for range. OBJ has extra member source 'startRange|endRange|shared'
+ (DATE, DATE2)->OBJ_ARR                  12*-|||#Like formatToParts() but for range. OBJ has extra member source 'startRange|endRange|shared'
 
 new Intl.RelativeTimeFormat([LOCALEOPTS])12*-|||#Date|Time|Date+Time locale formatting, for relative time ("time ago")
                                          12*-|||#OPTS:
