no commit message

--- a/UX/Text/i18n/Encoding/Unicode/Detection/astral-regex.node.txt
+++ b/UX/Text/i18n/Encoding/Unicode/Detection/astral-regex.node.txt
@@ -7,4 +7,4 @@
 
 VERSION ==>                       #2.0.0
 
-ASTRAL-REGEX([OPTS])->REGEXP      #REGEXP to match Unicode astral characters, i.e. U-d800 to U-dfff
+ASTRAL-REGEX([OPTS])->REGEXP      #REGEXP to match Unicode astral|surrogate characters, i.e. U-d800 to U-dfff
