--- a/UX/Text/i18n/Encoding/Unicode/Detection/astral-regex.node.txt
+++ b/UX/Text/i18n/Encoding/Unicode/Detection/astral-regex.node.txt
@@ -7,4 +7,10 @@
 
 VERSION ==>                       #2.0.0
 
-ASTRAL-REGEX([OPTS])->REGEXP      #REGEXP to match Unicode astral|surrogate characters, i.e. U-d800 to U-dfff
+ASTRAL-REGEX([OPTS])->REGEXP      #REGEXP to match Unicode astral|surrogate characters.
+                                  #I.e. U-d800 to U-dfff, used for Unicode codepoints > U-10000
+                                  #Does not match surrogate characters in isolation (since this is invalid UTF-8)
+                                  #OPTS:
+                                  #  - exact BOOL:
+                                  #     - false (def): 'g' flag, no ^$
+                                  #     - true: no 'g' flag, but ^$
