no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -993,27 +993,28 @@ WRITESTREAM.on("resize", FUNC())                #
 WRITESTREAM.getColorDepth([process.env])->NUM   #Number of bits per channel: 1|4|8|24
                                                 #Used by console.*() and REPL
                                                 #Based on heuristic on process.env and os.release():
-                                                #  - Linux:
-                                                #     - ENVVAR TERM 'dumb': 1 bit
-                                                #     - ENVVAR TMUX, ENVVAR TERM 'eterm|cons25|console|cygwin|dtterm|gnome|
-                                                #       hurd|jfbterm|konsole|kterm|mlterm|mosh|putty|st' or contains
-                                                #       'ansi|color|linux|con|rxvt|screen|term|vt100', ENVVAR COLORTERM: 4 bits
-                                                #     - ENVVAR TERM 'xterm-256*': 8 bits
-                                                #     - ENVVAR TERM 'terminator|rxvt-unicode-24bit',
-                                                #       ENVVAR COLORTERM 'truecolor|24bit': 24 bits
-                                                #  - Mac (base on ENVVAR 'TERM_PROGRAM'):
-                                                #     - 'Apple_Terminal', old 'iTerm.app': 4 bits
-                                                #     - 'HyperTerm', 'MacTerm', new 'iTerm.app': 24 bits
-                                                #  - Windows:
-                                                #     - <10: 4 bits
-                                                #     - 10 before build 14931: 8 bits
-                                                #     - after: 24 bits
-                                                #  - CI:
-                                                #     - Travis/CircleCI/AppVeyor/GitLab/Codeship: 8 bits
-                                                #     - others: 1 bit
-                                                #  - Teamcity:
-                                                #     - old versions: 1 bit
-                                                #     - new versions: 4 bits
+                                                #  - terminal ENVVAR:
+                                                #     - TERM:
+                                                #        - 'dumb': 1 bit
+                                                #        - 'screen*|xterm*|vt100*|rxvt*|*color*|*ansi*|cygwin|*linux*|*con*x*
+                                                #          |eterm|cons25|console|cygwin|dtterm|gnome|hurd|jfbterm|konsole|kterm|mlterm|putty|st': 4 bits
+                                                #        - 'xterm-256*': 8 bits
+                                                #     - TERM_PROGRAM:
+                                                #        - 'HyperTerm|MacTerm': 24 bits
+                                                #        - 'Apple_Terminal': 8 bits
+                                                #        - 'iTerm.app':
+                                                #           - ENVVAR TERM_PROGRAM_VERSION with version >=3: 24 bits
+                                                #           - otherwise: 8 bits
+                                                #     - COLORTERM:
+                                                #        - 'truecolor|24bit': 24 bits
+                                                #        - otherwise: 4 bits
+                                                #  - Windows, based on Windows 10 build:
+                                                #     - >= 14931: 24 bits
+                                                #     - >= 10586: 8 bits
+                                                #     - otherwise: 4 bits
+                                                #  - CI (ENVVAR CI defined):
+                                                #     - ENVVAR TRAVIS|CIRCLECI|APPVEYOR|GITLAB_CI or CI_NAME 'codeship': 4 bits
+                                                #     - ENVVAR TEAMCITY_VERSION recent: 4 bits (older: 1 bit)
                                                 #  - otherwise: 1 bit
 ENVVAR FORCE_COLOR=0|1|2|3                   11*#Force getColorDepth() to assume color support for 1|4|8|24 bits per channel
 ENVVAR NO_COLOR=1                            11*#Same as FORCE_COLOR=0
