--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -694,6 +694,7 @@ OBJ.hasOwnProperty('VAR')                       #Returns true if OBJ['VAR'] is i
 'VAR' in OBJ                                    #Returns true if OBJ['VAR'] is member, including shared or non-enumerable.
                                                 #Negation: !('VAR' in OBJ)
                                                 #Note: for (QUAL STR in OBJ) includes shared, but excludes non-enumerable
+#PROP in OBJ                                 *-|#Returns true if OBJ has private #PROP
 
 Object.assign(OBJ[, OBJ2...])                 -|#Shallow copy of own enumerable OBJ2 members to OBJ, which is returned.
                                               -|#Also copies SYMs.
