--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -2122,11 +2122,12 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.size() -> ARR.length
                                  ##  - _.isNaN() -> Number.isNaN()
                                  ##  - _.isInteger() -> Number.isInteger()
+                                 ##  - _.isArray() -> Array.isArray()
+                                 ##  - _.isString|isFunction() -> typeof
                                  ##  - _.keys|assign|values|entries() -> Object.keys|assign|values|entries()
                                  ##  - _.toLower|toUpper|trim|repeat() -> STR.toLowerCase|toUpperCase|trim|repeat()
                                  ##  - _.flatten() -> ARR.flat()
                                  ##  - _.uniq() -> [...new Set()]
-                                 ##  - _.isArray() -> Array.isArray()
                                  ##  - _.first|last() -> ARR[] and ARR.slice()
                                  ##  - _.bind() -> FUNC.bind()
                                  ##  - _.omit|pick() -> { ...OBJ }
@@ -2137,6 +2138,8 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.padStart|End() -> STR.padStart|End()
                                  ##  - _.upperFirst() -> STR[0].toUpperCase()
                                  ##  - _.throttle() -> small helper function
+                                 ##  - _.get() -> OBJ?.VAR
+                                 ##  - _.castArray() -> Array.isArray()
                                  ##Not checked:
                                  ##  - _.isString() -> typeof
                                  ##  - _.chunk() -> ARR.reduce()
@@ -2156,7 +2159,7 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.random() -> Math.random()
                                  ##  - _.clamp() -> Math.min|max()
                                  ##  - _.debounce() -> small helper function
-                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.10.0)
+                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.11.0)
 
 
                                              /=+===============================+=\
