no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -988,6 +988,8 @@ READSTREAM.bytesRead                            #So far (including newlines)
 WriteStream                                     #Same as READSTREAM but for OSTREAM of a text terminal
                                                 #For process.stdout|stderr unless !isTTY
 WRITESTREAM.columns|rows                        #UINT. Automatically updated.
+                                                #Under the hood, uses OS-specific syscalls (ioctl on Unix, GetConsoleScreenBufferInfo() on Windows)
+WRITESTREAM.getWindowSize()->[COL_NUM, ROW_NUM] #Returns WRITESTREAM.columns|rows
 WRITESTREAM.on("resize", FUNC())                #
 
 WRITESTREAM.getColorDepth([process.env])->NUM   #Number of bits per channel: 1|4|8|24
