no commit message

--- a/UX/Text/i18n/Encoding/Unicode/Data/unicode-data.node.txt
+++ b/UX/Text/i18n/Encoding/Unicode/Data/unicode-data.node.txt
@@ -5,4 +5,30 @@
 
 
 
+TODO: finish documentation of this
+
 VERSION ==>                       #0.1.0
+
+require('@unicode/unicode-X.Y.Z') #UNICODE
+                                  #UCD and emoji data.
+
+CNUM                              #Codepoint NUM
+CCHAR                             #Codepoint 'CHAR'
+CODEPOINT_MAP                     #MAP where key is CNUM and value is STR
+require('.../FILE')               #List of codepoints, with info spread across several FILEs:
+                                  #  - code-points.js CNUM_ARR
+                                  #  - symbols.js CCHAR_ARR
+                                  #  - regex.js REGEXP
+
+UNICODE.Names                     #STR_ARR (empty)
+require('@unicode/unicode-X.Y.Z/  #CODEPOINT_MAP of codepoint names, uppercased, e.g. 'EXCLAMATION MARK'
+ Names')                          #Some names are shared:
+                                  #  - '<control>' (0-1f, 7f-9f)
+                                  #  - '[Non ]Private Use High Surrogate' (d800-db7f, db80-dbff), 'Low Surrogate' (dc00-dfff)
+                                  #  - 'Private use' (e000-f8ff), 'Plane 15-16 Private use' (f0000-10ffff)
+                                  #  - 'CJK Ideograph[ Extension A-G|K]' (3400-4dbf, 4e00-9ffc, 3400-9999, 20000-2ebe0, 30000-3134a),
+                                  #    'Hangul Syllable' (ac00-d7a3), Tangut Ideograph (17000-187f7)
+
+UNICODE.Blocks                    #All Unicode 'BLOCK'_ARR, i.e. grouping close codepoints together.
+require('@unicode/unicode-X.Y.Z/
+ Blocks/BLOCK/FILE')              #
